--- a/Debug/configPkg/package/cfg/empty_pem3.cfg
+++ b/Debug/configPkg/package/cfg/empty_pem3.cfg
@@ -76,7 +76,7 @@ function _cfginit() {
     /* initialize prog attrs from build model */
     var build = {
         profile: "release",
-        cfgScript: "/home/linuxlite/Downloads/tkj-test-lab/empty.cfg",
+        cfgScript: "C%3A/koulu/tkj/tkj-test-lab/empty.cfg",
         cfgHome: "configPkg",
         cfgArgs: "null",
         cfgArgsEncoded: true,
@@ -115,9 +115,9 @@ function _cfginit() {
                 typ: "asm"
             }
         },
-        rootDir: "/home/linuxlite/ti/ccs1040/ccs/tools/compiler/ti-cgt-arm_20.2.5.LTS",
+        rootDir: "C%3A/ti/ccstheia151/ccs/tools/compiler/ti-cgt-arm_20.2.5.LTS",
         ccOpts: {
-            prefix: "-mv7M3%20--code_state%3D16%20--float_support%3Dnone%20-me%20--include_path%3D%22/home/linuxlite/Downloads/tkj-test-lab%22%20--include_path%3D%22/home/linuxlite/Downloads/tkj-test-lab%22%20--include_path%3D%22/home/linuxlite/ti/tirtos_cc13xx_cc26xx_2_21_01_08/products/cc26xxware_2_24_03_17272%22%20--include_path%3D%22/home/linuxlite/ti/ccs1040/ccs/tools/compiler/ti-cgt-arm_20.2.5.LTS/include%22%20--define%3Dccs%20-g%20--diag_warning%3D225%20--diag_warning%3D255%20--diag_wrap%3Doff%20--display_error_number%20--gen_func_subsections%3Don%20--abi%3Deabi%20%20%20-qq%20-pdsw225"
+            prefix: "-mv7M3%20--code_state%3D16%20--float_support%3Dnone%20-me%20--include_path%3D%22C%3A/koulu/tkj/tkj-test-lab%22%20--include_path%3D%22C%3A/koulu/tkj/tkj-test-lab%22%20--include_path%3D%22C%3A/ti/tirtos_cc13xx_cc26xx_2_21_00_06/products/cc26xxware_2_24_03_17272%22%20--include_path%3D%22C%3A/ti/ccstheia151/ccs/tools/compiler/ti-cgt-arm_20.2.5.LTS/include%22%20--define%3Dccs%20-g%20--diag_warning%3D225%20--diag_warning%3D255%20--diag_wrap%3Doff%20--display_error_number%20--gen_func_subsections%3Don%20--abi%3Deabi%20%20%20-qq%20-pdsw225"
         },
         rawVersion: "20.2.5"
     };
@@ -175,7 +175,7 @@ function _userscript(script) {
 
     xdc.om.$$bind('$homepkg', home);
 
-    var cfgScript = "/home/linuxlite/Downloads/tkj-test-lab/empty.cfg";
+    var cfgScript = "C:/koulu/tkj/tkj-test-lab/empty.cfg";
     if (!script) {
         utils.loadCapsule(cfgScript, false, spath);
     }
