--- a/.cproject
+++ b/.cproject
@@ -122,7 +122,7 @@
                         </tool>
                     </fileInfo>
                     <sourceEntries>
-                        <entry excluding="tehtava.c|mpu_test.c|project_main.c|uart_task.c|task_example.c|HelloWorld.c|empty.c|src" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+                        <entry excluding="buzzer_example.c|mpu_test.c|project_main.c|uart_task.c|task_example.c|HelloWorld.c|empty.c|src" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
                     </sourceEntries>
                 </configuration>
             </storageModule>
