--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -86,6 +86,15 @@
                 "name": "empty_CC2650STK_TI",
                 "resourceId": "/empty_CC2650STK_TI/queue.h"
             }
+        },
+        {
+            "name": "empty_CC2650STK_TI (9)",
+            "type": "ccs-debug",
+            "request": "launch",
+            "projectInfo": {
+                "name": "empty_CC2650STK_TI",
+                "resourceId": "/empty_CC2650STK_TI/task_example.c"
+            }
         }
     ]
 }
